--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,2 +1,3 @@
 <h1>This is a safe space for you and your thoughts</h1>
-<p>Loading options...</p>
+<p>By clicking this button you will be writing today's record</p>
+<%= button_to 'Write a record', new_record_path, method: :get, class: 'btn btn-primary' %>
