--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,8 +1,8 @@
 <h1>Record for <%= Date.today %></h1>
 <%= form_with(model: @record, local: true) do |form| %>
   <div class="form-group">
-    <%= form.label :content, 'What do you want to write?' %>
-    <%= form.text_area :content, class: 'form-control', rows: 5 %>
+    <%= form.label :body, 'What do you want to write?' %>
+    <%= form.text_area :body, class: 'form-control', rows: 5 %>
   </div>
   <div class="form-group">
     <%= form.label :mood, 'How do you feel?' %>
