--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,3 +1,10 @@
 <h1>This is a safe space for you and your thoughts</h1>
+<p>Here you can write your daily record</p>
+<h1>Liste des Records</h1>
+<ul>
+  <% @records.each do |record| %>
+    <li><%= record.date %> - <%= record.mood %></li>
+  <% end %>
+</ul>
 <p>By clicking this button you will be writing today's record</p>
 <%= button_to 'Write a record', new_record_path, method: :get, class: 'btn btn-primary' %>
