--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -6,11 +6,7 @@
   </div>
   <div class="form-group">
     <%= form.label :mood, 'How do you feel?' %>
-    <%= form.select :mood, ['happy', 'sad', 'angry', 'confused', 'excited'], {}, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= form.label :tags, 'Tags (comma separated)' %>
-    <%= form.text_field :tags, class: 'form-control' %>
+    <%= form.select :mood, %w[happy sad angry confused excited], {}, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= form.submit 'Save Record', class: 'btn btn-primary' %>
